unpackaged/main/default/objects/CMPL123CME__MDR_Code__c/CMPL123CME__MDR_Code__c.object-meta.xml
<CustomObject>
    <description>Junction object between MDR and Complaint Code object</description>
    <label>MDR Code</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SL No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDR Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>