unpackaged/main/default/objects/CMPL123CME__MDR_Code__c/fields/CMPL123CME__Category__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluation Code</fullName>
                </value>
                <value>
                    <fullName>Event Problem Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>