unpackaged/main/default/objects/CMPL123CME__MDR_Code__c/fields/CMPL123CME__Complaint_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Complaint_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint Code</label>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>MDR Codes</relationshipLabel>
        <relationshipName>MDR_Codes</relationshipName>
        <type>Lookup</type>
    </CustomField>