unpackaged/main/default/objects/CMPL123CME__MDR_Code__c/fields/CMPL123CME__EMDR_MDR_CODE_DESCRIPTION__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__EMDR_MDR_CODE_DESCRIPTION__c</fullName>
        <formula>CMPL123CME__Complaint_Code__r.CMPL123CME__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMDR MDR Code Description</label>
        <type>Text</type>
    </CustomField>