unpackaged/main/default/objects/CMPL123CME__MDR_Code__c/fields/CMPL123CME__EMDR_MDR_CODE_TYPE__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__EMDR_MDR_CODE_TYPE__c</fullName>
        <formula>TEXT(CMPL123CME__Complaint_Code__r.CMPL123CME__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMDR MDR CODE TYPE</label>
        <type>Text</type>
    </CustomField>