unpackaged/main/default/objects/CMPL123CME__MDR_Code__c/listViews/CMPL123CME__All.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__All</fullName>
        <columns>CMPL123CME__Complaint_Code__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__EMDR_MDR_CODE_TYPE__c</columns>
        <columns>CMPL123CME__EMDR_MDR_CODE_SECONDARY__c</columns>
        <columns>CMPL123CME__EMDR_MDR_CODE_DESCRIPTION__c</columns>
        <columns>CMPL123CME__MDR_Report__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>